<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LYT_JoingGameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/achtergrond"
    android:orientation="vertical"
    tools:context=".Activities.JoinGameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginBottom="35dp"
        android:background="#4FFFFFFF"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_team_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/default_team_name"
            android:textColor="@color/white"
            android:textSize="50sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:text="@string/create_team"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <View
        android:layout_width="200dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:background="#ffffff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_gravity="start"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="25dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/team_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="NestedWeights" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/team_color"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/game_code"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_text_team_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textCapSentences"
                android:maxLength="10"
                android:textColor="@color/white"
                tools:ignore="Autofill,LabelFor,NestedWeights" />

            <Button
                android:id="@+id/button_pick_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/yellowAntw"
                android:text="@string/pick_color"
                tools:ignore="UnusedAttribute" />

            <EditText
                android:id="@+id/edit_text_game_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLength="4"
                android:textColor="@color/white"
                tools:ignore="Autofill,LabelFor" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_join_game"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/yellowAntw"
        android:text="@string/join"
        tools:ignore="UnusedAttribute" />

</LinearLayout>