<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/achtergrond_logo"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Activities.MainActivity">

    <Button
        android:id="@+id/button_create_game_window"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_game"
        android:textColor="@color/white"
        android:layout_marginTop="100dp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/button_join_game_window"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/join_game"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/image_view_help"
        android:layout_marginTop="50dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/questionmark"
        android:contentDescription="@string/question_mark_symbol" />

</LinearLayout>